--- a/modules/client/azure-pipelines-prod.yml
+++ b/modules/client/azure-pipelines-prod.yml
@@ -77,30 +77,30 @@ stages:
                 $(tagLatest)
                 $(tagBuildId)
 
-  # - stage: Deploy
-  #   displayName: Deploy to DigitalOcean App Platform
-  #   dependsOn: Push
-  #   # Only deploy on master (avoid PR validations)
-  #   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-  #   jobs:
-  #     - job: Deploy
-  #       displayName: Trigger DigitalOcean Deploy
-  #       pool:
-  #         name: Default
-  #         demands:
-  #           - Agent.OS -equals Linux
-  #       steps:
-  #         - script: |
-  #             echo "Triggering deployment on DigitalOcean App Platform..."
-  #             http_code=$(curl -sS -o /tmp/do_deploy.json -w "%{http_code}" \
-  #               -X POST \
-  #               -H "Authorization: Bearer $(DO_API_TOKEN)" \
-  #               -H "Content-Type: application/json" \
-  #               "https://api.digitalocean.com/v2/apps/$(DO_APP_ID)/deployments")
-  #             echo "POST /deployments => $http_code"
-  #             cat /tmp/do_deploy.json
-  #             case "$http_code" in
-  #               200|201|202) echo "Deployment triggered." ;;
-  #               *) echo "Deployment API failed"; exit 1 ;;
-  #             esac
-  #           displayName: "Call DigitalOcean API to redeploy"
+  - stage: Deploy
+    displayName: Deploy to DigitalOcean App Platform
+    dependsOn: Push
+    # Only deploy on master (avoid PR validations)
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    jobs:
+      - job: Deploy
+        displayName: Trigger DigitalOcean Deploy
+        pool:
+          name: Default
+          demands:
+            - Agent.OS -equals Linux
+        steps:
+          - script: |
+              echo "Triggering deployment on DigitalOcean App Platform..."
+              http_code=$(curl -sS -o /tmp/do_deploy.json -w "%{http_code}" \
+                -X POST \
+                -H "Authorization: Bearer $(DO_API_TOKEN)" \
+                -H "Content-Type: application/json" \
+                "https://api.digitalocean.com/v2/apps/$(DO_APP_ID)/deployments")
+              echo "POST /deployments => $http_code"
+              cat /tmp/do_deploy.json
+              case "$http_code" in
+                200|201|202) echo "Deployment triggered." ;;
+                *) echo "Deployment API failed"; exit 1 ;;
+              esac
+            displayName: "Call DigitalOcean API to redeploy"
