--- a/modules/client/Dockerfile
+++ b/modules/client/Dockerfile
@@ -1,5 +1,8 @@
 # Use an official Node.js runtime as the parent image
-FROM node:24-alpine
+FROM node:24
+
+# Install dumb-init for proper signal handling
+RUN apt-get update && apt-get install -y dumb-init
 
 # Set the working directory in the Docker container to /app
 WORKDIR /app
@@ -16,8 +19,11 @@ COPY . .
 # Build the application
 RUN npm run build
 
-# Make port 4001 available in development and production
-EXPOSE 4001
+# Make port 3001 available in development and production
+EXPOSE 3001
+
+# Use dumb-init to run your process
+ENTRYPOINT ["dumb-init", "--"]
 
 # Define the command to run the app
 CMD ["npm", "start"]
