--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -11,6 +11,8 @@ requires-python = ">=3.12"
 dependencies = [
   "langgraph>=1.0,<2",
   "langgraph-cli[inmem]>=0.2.8",
+  "langchain-openai>=1.0.1",
+  "langchain-community>=0.4.1",
   "python-dotenv>=1.0,<2",
   "langfuse>=3,<4",
   "openai>=2.6.0,<3",
