--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
   "langgraph-cli[inmem]>=0.2.8",
   "langchain-openai>=1.0.1",
   "langchain-community>=0.4.1",
+  "langchain-core>=0.3.79",
   "python-dotenv>=1.0,<2",
   "langfuse>=3,<4",
   "openai>=2.6.0,<3",
@@ -20,6 +21,8 @@ dependencies = [
   "uvicorn>=0.38,<1",
   "websockets>=15,<16",
   "pypdf>=5.4.0",
+  "google-search-results>=2.4.2",
+  "wikipedia>=1.4.0"
 ]
 
 
