--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.12"
 dependencies = [
+  "langchain>1.0.1",
+  "langchain-anthropic>=1.0.1",
   "langgraph>=1.0,<2",
   "langgraph-cli[inmem]>=0.2.8",
   "langchain-openai>=1.0.1",
