job search on google docs working

--- a/modules/agent/.env.example
+++ b/modules/agent/.env.example
@@ -5,3 +5,10 @@ LANGCHAIN_TRACING_V2=true
 LANGFUSE_SECRET_KEY=""
 LANGFUSE_PUBLIC_KEY=""
 LANGFUSE_HOST="http://langfuse:3000"
+
+# Google Sheets Integration (for job application tracking)
+# 1. Get your Sheet ID from the URL: https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/edit
+GOOGLE_SHEETS_ID=""
+# 2. Convert credentials.json to single line: python3 -c "import json; print(json.dumps(json.load(open('google-credentials.json'))))"
+# 3. Paste the output below (use single quotes to wrap the JSON)
+GOOGLE_SHEETS_CREDENTIALS_JSON='{"type":"service_account","project_id":"your-project",...}'
