--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -24,7 +24,9 @@ dependencies = [
   "websockets>=15,<16",
   "pypdf>=5.4.0",
   "google-search-results>=2.4.2",
-  "wikipedia>=1.4.0"
+  "wikipedia>=1.4.0",
+  "gspread>=6.1.0",
+  "google-auth>=2.34.0"
 ]
 
 
