includes email tool

--- a/modules/agent/.env.example
+++ b/modules/agent/.env.example
@@ -12,3 +12,8 @@ GOOGLE_SHEETS_ID=""
 # 2. Convert credentials.json to single line: python3 -c "import json; print(json.dumps(json.load(open('google-credentials.json'))))"
 # 3. Paste the output below (use single quotes to wrap the JSON)
 GOOGLE_SHEETS_CREDENTIALS_JSON='{"type":"service_account","project_id":"your-project",...}'
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT="587"
+SMTP_USERNAME="my-email@gmail.com"
+SMTP_PASSWORD="my app password" # must be an App Password, not your regular password
+SMTP_FROM_EMAIL="my-email@gmail.com"
