--- a/modules/agent/.env.example
+++ b/modules/agent/.env.example
@@ -17,3 +17,8 @@ SMTP_PORT="587"
 SMTP_USERNAME="my-email@gmail.com"
 SMTP_PASSWORD="my app password" # must be an App Password, not your regular password
 SMTP_FROM_EMAIL="my-email@gmail.com"
+JIRA_URL="https://my-url.atlassian.net"
+JIRA_EMAIL="my-email@gmail.com"
+JIRA_API_TOKEN=""
+JIRA_BOARD_ID=34 # e.g. 34
+JIRA_PROJECT_KEY="" # e.g. "PC"
