--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -26,7 +26,8 @@ dependencies = [
   "google-search-results>=2.4.2",
   "wikipedia>=1.4.0",
   "gspread>=6.1.0",
-  "google-auth>=2.34.0"
+  "google-auth>=2.34.0",
+  "requests>=2.31.0"
 ]
 
 
