--- a/modules/agent/.env.example
+++ b/modules/agent/.env.example
@@ -6,7 +6,19 @@ LANGFUSE_SECRET_KEY=""
 LANGFUSE_PUBLIC_KEY=""
 LANGFUSE_HOST="http://langfuse:3000"
 
-# Google Sheets Integration (for job application tracking)
+# Job Application Tracking - Choose Supabase (recommended) or Google Sheets
+USE_SUPABASE=true  # Set to false to use Google Sheets instead
+
+# Supabase Integration (for job application tracking)
+# 1. Create a Supabase account at https://supabase.com
+# 2. Create a new project
+# 3. Get your URL and keys from Settings > API
+SUPABASE_URL="https://your-project-ref.supabase.co"
+SUPABASE_SERVICE_KEY="your-service-role-key"
+# Optional: Database password for running migrations with psycopg2
+SUPABASE_DB_PASSWORD=""
+
+# Google Sheets Integration (legacy fallback)
 # 1. Get your Sheet ID from the URL: https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/edit
 GOOGLE_SHEETS_ID=""
 # 2. Convert credentials.json to single line: python3 -c "import json; print(json.dumps(json.load(open('google-credentials.json'))))"
