--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -25,8 +25,10 @@ dependencies = [
   "pypdf>=5.4.0",
   "google-search-results>=2.4.2",
   "wikipedia>=1.4.0",
+  "supabase>=2.0.0",
   "gspread>=6.1.0",
-  "google-auth>=2.34.0"
+  "google-auth>=2.34.0",
+  "psycopg2-binary>=2.9.11",
 ]
 
 
