recreate DO tokens

--- a/modules/client/azure-pipelines-prod.yml
+++ b/modules/client/azure-pipelines-prod.yml
@@ -27,8 +27,6 @@ variables:
   buildContext: "modules/client"
   tagLatest: "latest"
   tagBuildId: "$(Build.SourceBranchName)-$(Build.BuildId)"
-  DO_API_TOKEN: dop_v1_712eaf28237d9d0220284024e059789d134d1919cf79af5625600036051bc962
-  DO_APP_ID: 78d80fa1-9b73-4c13-a20c-8553c8cf92d4
 
 stages:
   - stage: Build
@@ -55,6 +53,7 @@ stages:
     displayName: Push Docker Image to GHCR
     dependsOn: Build
     # Only deploy on master (avoid PR validations)
+    # DO_API_TOKEN and DO_APP_ID are set in Azure DevOps Project Settings → Pipelines → Library → Variable groups (or Pipeline Variables).
     condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     jobs:
       - job: Push
