--- a/modules/agent/azure-pipelines-prod.yml
+++ b/modules/agent/azure-pipelines-prod.yml
@@ -4,7 +4,7 @@ trigger:
       - master
   paths:
     include:
-      - "**/client/**"
+      - "**/agent/**"
 
 pr:
   autoCancel: true
@@ -13,65 +13,64 @@ pr:
       - master
   paths:
     include:
-      - "**/client/**"
+      - "**/agent/**"
 
 resources:
   - repo: self
 
+# ---------------- Variables ----------------
 variables:
   dockerRegistryServiceConnection: "ghcr-conn"
   owner: "hubenschmidt"
-  imageName: "pina-colada-client"
+  imageName: "pina-colada-agent"
   imageRepository: "$(owner)/$(imageName)"
-  dockerfilePath: "modules/client/Dockerfile"
-  buildContext: "modules/client"
+  dockerfilePath: "modules/agent/Dockerfile.prod"
+  buildContext: "modules/agent"
   tagLatest: "latest"
   tagBuildId: "$(Build.SourceBranchName)-$(Build.BuildId)"
 
 stages:
   - stage: Build
-    displayName: Build app
+    displayName: Build agent
     jobs:
       - job: Build
-        displayName: Node build
-        pool:
-          name: Default # self-hosted Linux agent pool
-          demands:
-            - Agent.OS -equals Linux
-        steps:
-          - task: NodeTool@0
-            inputs:
-              versionSpec: "24"
-            displayName: "Install Node.js"
-          - task: Npm@1
-            displayName: "npm install (modules/client)"
-            inputs:
-              command: "install"
-              workingDir: "$(Build.SourcesDirectory)/modules/client"
-
-  - stage: Push
-    displayName: Push Docker Image to GHCR
-    dependsOn: Build
-    # Only deploy on master (avoid PR validations)
-    # DO_API_TOKEN and DO_APP_ID are set in Azure DevOps Project Settings → Pipelines → Library → Variable groups (or Pipeline Variables).
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-    jobs:
-      - job: Push
-        displayName: Build & push image
+        displayName: Docker build
         pool:
           name: Default # self-hosted Linux agent pool
           demands:
             - Agent.OS -equals Linux
         steps:
           - task: Docker@2
-            displayName: "Build and push to GHCR"
+            displayName: "Build Docker image"
             inputs:
-              command: "buildAndPush"
+              command: "build"
               containerRegistry: "$(dockerRegistryServiceConnection)"
-              repository: "$(imageRepository)" # owner/name ONLY
+              repository: "$(imageRepository)"
               dockerfile: "$(dockerfilePath)"
               buildContext: "$(buildContext)"
-              addPipelineData: false
+              tags: |
+                $(tagLatest)
+                $(tagBuildId)
+
+  - stage: Push
+    displayName: Push Docker Image to GHCR
+    dependsOn: Build
+    # Only deploy on master (avoid PR validations)
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    jobs:
+      - job: Push
+        displayName: Push image
+        pool:
+          name: Default # self-hosted Linux agent pool
+          demands:
+            - Agent.OS -equals Linux
+        steps:
+          - task: Docker@2
+            displayName: "Push to GHCR"
+            inputs:
+              command: "push"
+              containerRegistry: "$(dockerRegistryServiceConnection)"
+              repository: "$(imageRepository)"
               tags: |
                 $(tagLatest)
                 $(tagBuildId)
@@ -91,15 +90,11 @@ stages:
         steps:
           - script: |
               echo "Triggering deployment on DigitalOcean App Platform..."
-              echo "DEBUG: DO_APP_ID is set: $([ -z "$DO_APP_ID" ] && echo 'NO' || echo 'YES')"
-              echo "DEBUG: DO_API_TOKEN is set: $([ -z "$DO_API_TOKEN" ] && echo 'NO' || echo 'YES')"
-              echo "DEBUG: DO_APP_ID value length: $(echo -n "$DO_APP_ID" | wc -c)"
-              echo "DEBUG: DO_API_TOKEN value length: $(echo -n "$DO_API_TOKEN" | wc -c)"
               http_code=$(curl -sS -o /tmp/do_deploy.json -w "%{http_code}" \
                 -X POST \
-                -H "Authorization: Bearer $DO_API_TOKEN" \
+                -H "Authorization: Bearer $(DO_API_TOKEN)" \
                 -H "Content-Type: application/json" \
-                "https://api.digitalocean.com/v2/apps/$DO_APP_ID/deployments")
+                "https://api.digitalocean.com/v2/apps/$(DO_APP_ID)/deployments")
               echo "POST /deployments => $http_code"
               cat /tmp/do_deploy.json
               case "$http_code" in
@@ -107,6 +102,3 @@ stages:
                 *) echo "Deployment API failed"; exit 1 ;;
               esac
             displayName: "Call DigitalOcean API to redeploy"
-            env:
-              DO_API_TOKEN: $(DO_API_TOKEN)
-              DO_APP_ID: $(DO_APP_ID)
