--- a/modules/agent/azure-pipelines-prod.yml
+++ b/modules/agent/azure-pipelines-prod.yml
@@ -29,6 +29,8 @@ variables:
   buildContext: "modules/agent"
   tagLatest: "latest"
   tagBuildId: "$(Build.SourceBranchName)-$(Build.BuildId)"
+  doApiToken: $(DO_API_TOKEN)
+  doAppId: $(DO_APP_ID)
 
 stages:
   # - stage: Build
@@ -91,14 +93,8 @@ stages:
         steps:
           - script: |
               echo "=== Debugging Variables ==="
-              echo "DO_API_TOKEN exists: $([[ -n '$(DO_API_TOKEN)' ]] && echo 'YES' || echo 'NO')"
-              echo "DO_API_TOKEN length: ${#DO_API_TOKEN}"
-              echo "DO_API_TOKEN (first 10 chars): $(echo '$(DO_API_TOKEN)' | cut -c1-10)..."
-              echo ""
-              echo "DO_APP_ID exists: $([[ -n '$(DO_APP_ID)' ]] && echo 'YES' || echo 'NO')"
-              echo "DO_APP_ID value: $(DO_APP_ID)"
-              echo ""
-              echo "All available variables starting with DO_:"
+              echo "DO_API_TOKEN exists: $([[ -n '$(doApiToken)' ]] && echo 'YES' || echo 'NO')"
+              echo "DO_APP_ID exists: $([[ -n '$(doAppId)' ]] && echo 'YES' || echo 'NO')"
               env | grep ^DO_ || echo "No DO_* variables found"
             displayName: "Debug - Check Variables"
           - script: |
