--- a/modules/agent/azure-pipelines-prod.yml
+++ b/modules/agent/azure-pipelines-prod.yml
@@ -94,7 +94,9 @@ stages:
           - script: |
               echo "=== Debugging Variables ==="
               echo "DO_API_TOKEN exists: $([[ -n '$DO_API_TOKEN' ]] && echo 'YES' || echo 'NO')"
+              echo "DO_API_TOKEN value: $DO_API_TOKEN"
               echo "DO_APP_ID exists: $([[ -n '$DO_APP_ID)' ]] && echo 'YES' || echo 'NO')"
+              echo "DO_APP_ID value: $DO_APP_ID"
               env | grep ^DO_ || echo "No DO_* variables found"
             displayName: "Debug - Check Variables"
           - script: |
